fixed spacing again

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -40,21 +40,15 @@ nav .navbar-end {
   gap: 2px;
   display: flex;
   align-items: center;
-<<<<<<< HEAD
   background-color: #65a2b4;
-=======
->>>>>>> 408a6e36fe3f771c882945bfdb44b9f3d42f1dcc
 }
 nav .title {
   font-size: 5rem;
-<<<<<<< HEAD
   background-color: #65a2b4;
   
 }
 .navbar {
     background-color: #65a2b4;
-=======
->>>>>>> 408a6e36fe3f771c882945bfdb44b9f3d42f1dcc
 }
 
 .container.main-page {
@@ -248,6 +242,8 @@ nav .title {
   font-size: 2rem;
 }
 .field .button {
+margin-top: 10px;
+ margin-bottom: 100%;
 }
 .field .label {
   font-size: 1.3rem;
